app/assets/stylesheets/custom.css.scss
@import 'defs';
/*************************************************************/
/*Red - #e74c3c

Orange - #e67e22
Bright Orange #ff8c05

Yellow - #f1c40f

Green - #26a65b

Blue - #3498db

Purple - #9b59b6

Gray - #95a5a6

Clouds - #ecf0f1

Light Black - #34495e

Dark Black - #2c3e50
*/
/***************************************************************/
body {
  background-color: $white-color;
}


#page {
  min-height: 500px;
}
#emailForm{
  padding-top: 7px;
  padding-left: 20px;
  position: relative;
  text-align: right;
	float: right;
}
header, footer {
  color: $light-text-color;
  position: relative;
}

.mainlogo {
  max-height: 200px;
}

header.main, footer {
  z-index: 1;
  padding: 5px;
	background: #666;
	opacity: .95;
}

#logotext {
	display: inline-block;
	float: left;
	position: absolute;
	padding-left: 5px;
	padding-top: 0px;
}

@media only screen and (max-width: 992px) { 
  #logotext {
    visibility: hidden;
	}
}
@media only screen and (max-width: 766px) { 
#emailForm{
  position: absolute;
  right: 150px;
}
}


/************ ALAN GI's NAV BAR ***************************/
/* --------------- Header CODE ----------------- */
.main_h {
  position: fixed;
  top: 0px;
  max-height: 100px;
  z-index: 50;
  width: 100%;
  padding-top: 8px;
  background: none;
  overflow: hidden;
  -webkit-transition: all 0.3s; /*slide down transition as user scrolls*/
  transition: all 0.3s; /*slide down transition as user scrolls*/
 /*it must be -100 because it slides down 100 px*/
  padding-bottom: 6px;
  opacity: .95; /*it's 'invisible' at start, transition fades in as you scroll */
}

@media only screen and (max-width: 766px) {
  .main_h {
    padding-top: 25px;
    max-height: 62px;
  }
}

.open-nav {
  max-height: 400px !important;
  -webkit-transition: all 0.3s; /*fade in white*/
  transition: all 0.3s; /*fade in white*/
  background: #666;
  opacity: 1;
}
.open-nav .mobile-toggle {
  transform: rotate(-90deg);
  -webkit-transform: rotate(-90deg);
    opacity: 1;
}

/* --------------- Dropdown Menu CODE ----------------- */
.sticky {
  background-color: #666; /*Dropdown Menu color*/
  top: 0px;
  opacity: .95;
}

nav {
  float: right;
  width: 80%;
  padding-left: 7px;
  padding-top: 7px;
}
@media only screen and (max-width: 766px) {
  nav {
    width: 100%;
  }
}
nav ul {
  list-style: none;
  overflow: hidden;
  text-align: right;
  float: right;
}
@media only screen and (max-width: 766px) {
  nav ul {
    padding-top: 10px;
    margin-bottom: 22px;
    float: left;
    text-align: center;
    width: 100%;
  }
}
nav ul li {
  display: inline-block;
  margin-left: 12px;
  line-height: 1.5;
}
@media only screen and (max-width: 766px) {
  nav ul li {
    width: 100%;
    padding: 9px 0;
    margin: 0;
  }
}
nav ul a {
  color: #fff;
  text-transform: uppercase;
  font-size: 22px;
}
.mobile-toggle {
  display: none;
  cursor: pointer;
  font-size: 20px;
  position: absolute;
  margin-top: 12px;
  left: 22px;
  top: 0;
  width: 30px;
  -webkit-transition: all 200ms ease-in;
  -moz-transition: all 200ms ease-in;
  transition: all 200ms ease-in;
}
@media only screen and (max-width: 766px) {
  .mobile-toggle {
    display: block;
    padding-top: 6px;
  }
}
.mobile-toggle span {
  width: 30px;
  height: 4px;
  margin-bottom: 6px;
  border-radius: 1000px;
  background: #fff;
  display: block;
}

#linksandform{
  text-align: center;
  width: 100%;
}

#navbarrow{
  max-width: 250px;
}

@media only screen and (max-width: 767px){
  #emailForm{
    position: absolute;
    margin-top: -24px;
  }
  #submit-fixed{
    position: absolute;
    margin-top: -49px;
    margin-left: 3px;
  }
  #navbarrow{
    width: 100%;
    position: relative;
    max-width: 767px;
    padding-top: 3px;
  }
}

@media only screen and (max-width: 430px){
  #emailForm, #subit-fixed{
    margin-top: 150px;
  }
  #emailForm{
    margin-left: -20px;
  }
  #dropdowncontainer{
    min-height: 210px;
  }
}


#dropdownphoto{
    width: 85px;
}

#dropdowncontainer {
  padding-top: 6px;
}


/************Dropdown Nav Bar Links *************/

a:visited { text-decoration: none; color: #FFF; }
a:hover { text-decoration: none; color: #FFF;; }
a:focus { text-decoration: none; color: #FFF;; }
a:hover, a:active { text-decoration: none; color: #e67e22; }
a{
  -o-transition:.5s;
  -ms-transition:.5s;
  -moz-transition:.5s;
  -webkit-transition:.5s;
  transition:.5s;
}

.links {
  color: #FFF;
  font-size: 30px;
	color: #FFF;
	display:inline-block;
}

@media only screen and (max-width: 767px){
  .links{opacity: 0; position: absolute;}
}

/**************************/

@media only screen and (max-width: 1500px) { 

    #toptext {
        font-size: 100%;
    }
}
	
@media only screen and (max-width: 1000px) { 

    #toptext {
        font-size: 100%;
    }
}

@media only screen and (max-width: 800px) { 

    #toptext {
        font-size: 90%;
    }
}

@media only screen and (max-width: 600px) { 

    #toptext {
        font-size: 80%;
    }
}

@media only screen and (max-width: 400px) { 

    #toptext {
        font-size: 50%;
			margin-top: 50%;
    }
}


.fixed {
  @include border-box;
  position: fixed;
  top: 0;
  width: 100%;
  left: 0;
	background: #666;
	opacity: .95;
}



header.fixed {
  z-index: 5;
  padding-top: 7px;
  padding-bottom: 7px;
}

div.fixed {
  z-index: 15;
}

footer {
  @include border-box();
  position: fixed;
  width: 100%;
  bottom: 0;
  left: 0;
  height: $footer-height;
}

.center {
  width: $content-width;
  margin: 0 auto;
  overflow: hidden;
}

.right {
  text-align:right;
}

.accent {
  color: $accent-color;
}

section {
  padding-top: $padding-size;
  padding-bottom: $padding-size;
}

 
.glyphicon {
  padding-top: $padding-size;
  font-size: 48px;
}

#calltoaction {
  background: image-url('University-of-Minnesota.png') no-repeat center center;
  @include background-size(cover);
  height: 550px;
  
  .container {
    margin-top: 60px;
    
    h1 {
      color: $white-color;
    }
  }
}
/* ... */

